--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@ng-bootstrap/ng-bootstrap": "^2.0.0",
+    "angular2-highcharts": "^0.5.5",
     "core-js": "^2.4.1",
-    "highcharts": "^6.1.0",
+    "lodash": "^4.17.10",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
