--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^5.2.0",
     "@ng-bootstrap/ng-bootstrap": "^2.0.0",
     "angular2-highcharts": "^0.5.5",
+    "bootstrap": "^4.1.1",
     "core-js": "^2.4.1",
     "lodash": "^4.17.10",
     "rxjs": "^5.5.6",
