--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@ng-bootstrap/ng-bootstrap": "^2.0.0",
+    "@types/node": "^6.0.112",
     "angular2-highcharts": "^0.5.5",
     "bootstrap": "^4.1.1",
     "core-js": "^2.4.1",
